--- a/blogspot.html
+++ b/blogspot.html
@@ -4,9 +4,11 @@
         <link rel="stylesheet" href="css/estilos.css"/>
     </head>
     <body>
-        <h1>Bienvenido a mi Blog</h1>
-        <p>
-            Este es mi blogpost
-        </p>
+        <div id="container">
+            <div id="post">
+                <h1>Este es un título atractivo del blogspot</h1>
+                <p>Este es el párrafo de inicio donde se va a explicar cada increible cosa del blogspot</p>
+            </div>
+        </div>
     </body>
 </html>
