--- a/blogspot.html
+++ b/blogspot.html
@@ -5,6 +5,9 @@
     </head>
     <body>
         <div id="container">
+            <div id=cabecera>
+                cabecera
+            </div>
             <div id="post">
                 <h1>Este es un título atractivo del blogspot</h1>
                 <p>Este es el párrafo de inicio donde se va a explicar cada increible cosa del blogspot</p>
