--- a/blogspot.html
+++ b/blogspot.html
@@ -6,7 +6,8 @@
     <body>
         <div id="container">
             <div id=cabecera>
-                cabecera
+                Hyperblog
+                <span id="tagline">Tu blog de desconfianza</span>
             </div>
             <div id="post">
                 <h1>Este es un título atractivo del blogspot</h1>
