--- a/blogspot.html
+++ b/blogspot.html
@@ -8,6 +8,7 @@
             <div id="post">
                 <h1>Este es un título atractivo del blogspot</h1>
                 <p>Este es el párrafo de inicio donde se va a explicar cada increible cosa del blogspot</p>
+                <p>Hoy me voy a jugar fútbol, intentaré jugar bien pero llevo varios dias sin jugar y además acabo de comer un montón</p>
             </div>
         </div>
     </body>
