agregue suscripcion, cambie cabecera y color texto morado

--- a/blogspot.html
+++ b/blogspot.html
@@ -7,12 +7,13 @@
         <div id="container">
             <div id=cabecera>
                 Hyperblog
-                <span id="tagline">Tu blog de desconfianza</span>
+                <span id="tagline">Tu blog de maestro</span>
             </div>
             <div id="post">
                 <h1>Este es un título atractivo del blogspot</h1>
                 <p>Este es el párrafo de inicio donde se va a explicar cada increible cosa del blogspot</p>
                 <p>Hoy me voy a jugar fútbol, intentaré jugar bien pero llevo varios dias sin jugar y además acabo de comer un montón</p>
+                <p>Saludos suscriptor, dale laik</p>
             </div>
         </div>
     </body>
