--- a/blogspot.html
+++ b/blogspot.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Título de mi post</title>
+        <title>Post cool</title>
         <link rel="stylesheet" href="css/estilos.css"/>
     </head>
     <body>
