He agregado un parrafo descriptor del cambio, aqui aclaro que es independiente el commit y los cambios segun la carpeta en donde estoy

--- a/blogspot.html
+++ b/blogspot.html
@@ -15,6 +15,9 @@
                 <p>Hoy me voy a jugar fútbol, intentaré jugar bien pero llevo varios dias sin jugar y además acabo de comer un montón</p>
                 <p>Saludos suscriptor, dale laik</p>
             </div>
+            <div>
+                <p>Nuevo parrafo del proyecto trabajado con fredy para comparar con el proyecto viejo</p>
+            </div>
         </div>
     </body>
 </html>
