este commit era para probar git diff, parece que solo es para cambios realizados sin haber hecho commit o add

--- a/blogspot.html
+++ b/blogspot.html
@@ -18,6 +18,7 @@
             <div>
                 <p>Nuevo parrafo del proyecto trabajado con fredy para comparar con el proyecto viejo</p>
             </div>
+            <p>Este nuevo parrafo es para probar el comando git diff si sirve en cualquier momento o solo sirve en cambios sin git commit -al ""</p>
         </div>
     </body>
 </html>
