listo, git diff si solo sirve para cambios sin add y sin commit

--- a/blogspot.html
+++ b/blogspot.html
@@ -19,6 +19,7 @@
                 <p>Nuevo parrafo del proyecto trabajado con fredy para comparar con el proyecto viejo</p>
             </div>
             <p>Este nuevo parrafo es para probar el comando git diff si sirve en cualquier momento o solo sirve en cambios sin git commit -al ""</p>
+            <p>segunda prueba de git diff pero solo con add</p>
         </div>
     </body>
 </html>
